--- a/index.html
+++ b/index.html
@@ -5,15 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css"></link>
-    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
-        <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
-        <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
-    </svg>
     <title>Library</title>
 </head>
 <body>
     <div class="side-bar">
-        <button class="add-button">+</button>
+        <label for="title">Title: </label>
+        <input type="text" class="title-input" id="title" required>
+        <label for="author">Author: </label>
+        <input type="text" class="author-input" id="author" required>
+        <label for="pages">Pages: </label>
+        <input type="text" class="pages-input" id="pages" required>
+        <fieldset>
+            <legend>Have you read the book?</legend>
+            <label for="read">Yes: </label>
+            <input type="radio" id="read" value="read">
+            <label for="notRead">No: </label>
+            <input type="radio" id="notRead" value="notRead">
+            <button class="add-button">+</button>
+        </fieldset>
+     
     </div>
     <div class="header">
         <span class="header-info">My Library</span>
